[package]
name = "mpv-danmaku"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
libmpv = { git = "https://github.com/StratusFearMe21/libmpv-rs.git", rev = "c76af562cd7a16663f4592986998ddde2219eb2a", default-features = false }
libmpv-sys = { git = "https://github.com/StratusFearMe21/libmpv-rs.git", rev = "c76af562cd7a16663f4592986998ddde2219eb2a" }
url = "2.4.1"
tempfile = "3.8.1"
