[package]
name = "mpv-danmaku"
version = "0.1.1"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
libmpv = { git = "https://github.com/StratusFearMe21/libmpv-rs.git", rev = "d1ffe95df74470df7df2b53bf3cdc6d2ad07c231", default-features = false }
libmpv-sys = { git = "https://github.com/StratusFearMe21/libmpv-rs.git", rev = "d1ffe95df74470df7df2b53bf3cdc6d2ad07c231" }
url = "2.5.4"
tempfile = "3.20.0"
abv = "0.3.0"
